Fix z-index issue on homepage.

--- a/src/assets/css/decred-v5.css
+++ b/src/assets/css/decred-v5.css
@@ -226,6 +226,7 @@ body {
   left: 0px;
   top: 100%;
   right: 0px;
+  z-index: 1;
   overflow: hidden;
   background-color: #fff;
 }
